--- a/004-HTML-Kategorisi/bolum-sonu-projesi-01/index.html
+++ b/004-HTML-Kategorisi/bolum-sonu-projesi-01/index.html
@@ -14,28 +14,19 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Mission</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li><a href="index.html">Anasayfa</a></li>
+        <li><a href="about.html">Hakkımızda</a></li>
+        <li><a href="animals.html">Hayvanlar</a></li>
+        <li><a href="contacts.html">İletişim</a></li>
       </ul>
     </nav>
+    <h3>ANASAYFA</h3>
   </header>
 
   <blockquote>
     <p>Friends don’t spy; true friendship is about privacy, too.</p>
     <p><cite>– Stephen King</cite></p>
   </blockquote>
-
-  <aside>
-    <p>Your aside content goes here.</p>
-  </aside>
-
-  <section>
-    <h2>This is a section</h2>
-    <p>Some content will go here, which will be inside your section.</p>
-    </section>
 
   <article>
     <h2>This is an article</h2>
@@ -63,20 +54,11 @@
       <li>Facere, at commodi!</li>
     </ul>
   </article>
-  <article>
-    <h2>İçinde gizli bilgiler var!</h2>
-    <details>
-      <summary>Spoiler!!!</summary>
-      <img src="https://picsum.photos/id/233/1200/300" alt="">
-      <p>Dolores ullam doloremque excepturi ducimus, eveniet numquam laborum enim ratione.</p>
-      <ul>
-        <li>Lorem, ipsum dolor.</li>
-        <li>Tempora, nesciunt pariatur.</li>
-        <li>Sunt, ullam ab!</li>
-      </ul>
-      
-    </details>
-  </article>
+
+
+  <footer>
+    <p>2023 &copy; | Created By Muhammed İbrahim Tatar</p>
+  </footer>
 
 
 
